osprey_worker/src/osprey/engine/query_language/tests/test_validate_count_over/test_unsupported_comparator_rejected.txt
error: unsupported `CountOver` comparator
--> main.sml:1:8
     |
   1 | Query = CountOver(predicate=UserLoginIp == '1.1.1.1', window='10m') in [10, 20]
     |         ^ use one of: `>=`, `>`, `==`, `!=`, `<=`, `<`